Archive2/4f/ebf529e5e978a6/output
+ g++ -O3 -std=c++1y -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:39:20: error: no match for 'operator+' (operand types are 'int' and 'Foo<int>')
     std::cout << 2 + a << std::endl; // outputs 12
                    ^
+ echo 1
1
